# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.73 2005/02/18 23:52:38 codeman Exp $

*GLI-0.01 (9 Feb 2004)

  18 Feb 2005; Preston Cody <codeman@gentoo.org>
  added progress bar to dialogfe and fix logger bug in ArchTemplate.
  
  18 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Created GLISayWhat module. Renamed GLISayWhat to GLILocalization. Moved
  lang parameter to __init__()
  
  10 Feb 2005; Preston Cody <codeman@gentoo.org>
  updates to TODO list.

  6 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Initial code for quickpkg GRP support. Fix loop to grab packages from
  'emerge -p blah'

  6 Feb 2005; Preston Cody <codeman@gentoo.org>
  check for dhcp in the network stuff and emerge it if it is.
  added quickpkg to TODO list

  5 Feb 2005; Preston Cody <codeman@gentoo.org>
  Changed the raising of 'warning' exceptions to a simple log of the error
  so that the installer can continue.

  3 Feb 2005; Preston Cody <codeman@gentoo.org>
  Some big changes.  First, changed most output to display_on_tty8.
  Second, added log lines to all templates.  Some smaller fixes such as typos.
  Also did some cleanups of old commented lines.

  1 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Changed tty8 output to a fifo. Minor GLIStorageDevice fix thanks to BenUrban.
  Undo change with fix. Escaping fix in GLIStorageDevice.py

  31 Jan 2005; Preston Cody <codeman@gentoo.org>
  more updates to TODO list.  hopefully we'll soon start removing items instead
  of adding them.

  29 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Changed the way GLIStorageDevice.get_max_sectors_for_resize() works

  27 Jan 2005; Preston Cody <codeman@gentoo.org>
  updated TODO list. (again)

  25 Jan 2005; Preston Cody <codeman@gentoo.org>
  changed output of portmap start to display_on_tty8.
  fixed bootloader for udev and multiple kernels
  fixed custom kernel config (again)
