@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.72 2005/02/18 03:55:39 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.73 2005/03/01 06:42:39 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  1 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Quick fix to empty the fifo
 
   17 Feb 2005; John Laliberte <allanonl@bu.edu>
   ExtraPackages.py - Added a lot of UI reaction details.  It now
