@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.73 2005/02/18 23:52:38 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.74 2005/03/01 06:42:39 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  1 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Commented out 'display_on_tty8=True' in start_portmap()
 
   18 Feb 2005; Preston Cody <codeman@gentoo.org>
   added progress bar to dialogfe and fix logger bug in ArchTemplate.
